--- a/extensions/order-status-rewards/package.json
+++ b/extensions/order-status-rewards/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@shopify/ui-extensions": "^2024.10.0",
     "@shopify/ui-extensions-react": "^2024.10.0",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-reconciler": "^0.33.0"
   }
 }
