--- a/extensions/thank-you-card/package.json
+++ b/extensions/thank-you-card/package.json
@@ -6,8 +6,8 @@
     "build": "echo 'Build handled by Shopify CLI'"
   },
   "dependencies": {
-    "@shopify/checkout-ui-extensions": "^0.27.0",
-    "@shopify/checkout-ui-extensions-react": "^0.27.0",
+    "@shopify/ui-extensions": "^2024.10.0",
+    "@shopify/ui-extensions-react": "^2024.10.0",
     "react": "^18.2.0"
   },
   "devDependencies": {
